--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "AMKPROJECT",
   "version": "1.0.0",
   "dependencies": {
-    "swagger-client": "3.8.21"
+    "swagger-client": "3.8.21",
+    "slappforge-sdk-xml": "0.0.5"
   }
 }
